fix issues with long instantiation